--- a/app/elements/theme/wcs-theme.html
+++ b/app/elements/theme/wcs-theme.html
@@ -4,9 +4,9 @@ Copyright © HatioLab Inc. All rights reserved.
 -->
 
 <link rel="import" href="../../bower_components/things-theme/things-theme.html">
-<script type="text/javascript" src="anythings-theme-grid.js"></script>
+<script type="text/javascript" src="wcs-theme-grid.js"></script>
 
-<dom-module id="anythings-theme">
+<dom-module id="wcs-theme">
     <template>
         <style>
             :root {
@@ -115,17 +115,17 @@ Copyright © HatioLab Inc. All rights reserved.
                 }
 
                 /* color style */
-                --things-primary-background-color: #252222;
+                --things-primary-background-color: #394e64;
                 /*darkgray*/
-                --things-secondary-background-color: #f7af01;
+                --things-secondary-background-color: #283644;
                 /*yellow*/
-                --things-primary-color: #e6b84b;
+                --things-primary-color: #22A6A7;
                 /*pastel yellow*/
-                --things-secondary-color: #f7af01;
+                --things-secondary-color: #394e64;
                 /*yellow*/
                 --things-focus-background-color: #f7af01;
-                --things-whitegrey-background-color:#3c3c3c;
-                --things-lightgrey-background-color:rgba(0, 0, 0, .1);
+                --things-whitegrey-background-color:#f4f7fb;
+                --things-lightgrey-background-color:rgba(217, 217, 217, .1);
                 --things-white-background-color:#fff;
                 --things-error-color:var(--paper-deep-orange-700);
                 --things-primary-text-color: #ababab;
@@ -135,8 +135,8 @@ Copyright © HatioLab Inc. All rights reserved.
                 --things-dark-desc-text-color:#aaacaf;
 
                 /* sidebar style */
-                --things-sidebar-background-color:#312e2e;
-                --things-sidebar-active-color:#3c3c3c;
+                --things-sidebar-background-color:#22A6A7;
+                --things-sidebar-active-color:#394e64;
 
                 --things-tiny-icon: {
                     padding: 0;
@@ -297,12 +297,13 @@ Copyright © HatioLab Inc. All rights reserved.
                 /* tab style */
                 --paper-tabs-selection-bar-color:var(--things-secondary-background-color);
                 --things-tab-size:35px;
-                --things-recent-page-backgroud-color:#252222;
+                --things-recent-page-backgroud-color:#394e64;
 
-                --things-tab-background-color: #252222;
-                --things-tab-selected-color: #3c3c3c;
-                --things-tab-hover-color:#2d2d2d;
-                --things-tab-selected-text:#fff;
+                --things-tab-background-color: #394e64;
+                --things-tab-selected-color: #22A6A7;
+                --things-tab-hover-color:#ffffff;
+                --things-tab-selected-text:#111111;
+
 
                 --paper-tabs: {
                     background-color: rgba(0, 0, 0, .05);
