--- a/app/elements/things-layout/things-sidebar.html
+++ b/app/elements/things-layout/things-sidebar.html
@@ -40,101 +40,116 @@ Copyright © HatioLab Inc. All rights reserved.
     <style>
       :host {
         display: block;
-        background-color:var(--things-sidebar-background-color);
-        color:#fff;
+        background-color: var(--things-sidebar-background-color);
+        color: #fff;
       }
+
       paper-scroll-header-panel {
         height: 100%;
         @apply --things-sidebar-panel;
-        border-right:1px solid #252222;
+        border-right: 1px solid #252222;
       }
+
       .brand {
-        height:39px;
+        height: 39px;
         padding: 14px 0 0 10px;
         background-color: var(--things-primary-background-color);
       }
+
       paper-button {
         display: block;
         border-bottom: 1px solid rgba(0, 0, 0, .15);
-        margin: 0;padding:10px 5px 10px 10px;
+        margin: 0;
+        padding: 10px 5px 10px 10px;
         font-size: 15px;
-        font-weight:bold;
+        font-weight: bold;
         text-align: left;
-        color:var(--things-sidebar-text-color);
+        color: var(--things-sidebar-text-color);
         @apply --border-radius-clear;
       }
-      paper-button[active]{
-        background-color:var(--things-whitegrey-background-color);
-        color:#fff;
+
+      paper-button[active] {
+        background-color: var(--things-sidebar-active-color);
+        color: #fff;
       }
 
 
-      iron-collapse:focus,a:focus{outline:none;}
+      iron-collapse:focus,
+      a:focus {
+        outline: none;
+      }
+
       paper-button iron-icon {
         @apply --things-small-icon;
         margin-top: -2px;
         margin-right: 4px;
       }
+
       paper-listbox {
-        background: -moz-linear-gradient(top, #312e2e 20%, #252222 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(top, #312e2e 20%,#252222 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to bottom, #312e2e 20%,#252222 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        border-top:1px solid #312e2e;
-        padding:0;
+        background: -moz-linear-gradient(top, #312e2e 20%, #252222 100%);
+        /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, #312e2e 20%, #252222 100%);
+        /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, #312e2e 20%, #252222 100%);
+        /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        border-top: 1px solid #312e2e;
+        padding: 0;
       }
+
       paper-item:before {
-        content:"";
-        display:inline-block;
-        width:4px;height:1px;
-        position:relative;
-        top:-3px;
-        margin-right:3px;
-        background-color:rgba(255,255,255,.3);
+        content: "";
+        display: inline-block;
+        width: 4px;
+        height: 1px;
+        position: relative;
+        top: -3px;
+        margin-right: 3px;
+        background-color: rgba(255, 255, 255, .3);
       }
+
       paper-item {
         padding: 0 10px 0 11px;
         display: block !important;
-        min-height:25px !important;
+        min-height: 25px !important;
         font-size: 13px !important;
         color: var(--things-primary-text-color);
       }
 
-      paper-item:hover{
-        background-color: rgba(255,255,255,.1);
-        color:rgba(255,255,255,1);
+      paper-item:hover {
+        background-color: rgba(255, 255, 255, .1);
+        color: rgba(255, 255, 255, 1);
       }
 
 
-      paper-item[active]{
-        color:#e6b84b;
-        font-weight:bold;
-        background-color:rgba(0,0,0,.1);
+      paper-item[active] {
+        color: #e6b84b;
+        font-weight: bold;
+        background-color: rgba(0, 0, 0, .1);
       }
-      paper-item[active]:before{
-        background-color:var(--things-secondary-background-color);
-        opacity:1;
+
+      paper-item[active]:before {
+        background-color: var(--things-secondary-background-color);
+        opacity: 1;
       }
+
       iron-image {
-        display:block !important;
+        display: block !important;
       }
+
       .things-image-button {
-        display:block;
-        text-align:center;
-        text-decoration:none;
-        font-size:15px;
+        display: block;
+        text-align: center;
+        text-decoration: none;
+        font-size: 15px;
       }
+
       a {
-        text-decoration:none;
+        text-decoration: none;
       }
     </style>
 
-    <things-ajax
-      auto
-      id="refresh"
-      resource-url="[[resourceUrl]]"
-      resource-action="[[resourceAction]]"
-      query-fields="[[queryFields]]"
-      last-response="{{menus}}">
+    <things-ajax auto id="refresh" resource-url="[[resourceUrl]]" resource-action="[[resourceAction]]"
+      query-fields="[[queryFields]]" last-response="{{menus}}">
     </things-ajax>
 
     <div class="brand">
@@ -148,7 +163,8 @@ Copyright © HatioLab Inc. All rights reserved.
       <template is="dom-repeat" items="{{menuGroup}}" as=group>
         <!-- Standard Menu -->
         <template is="dom-if" if={{isStandard}}>
-          <paper-button aria-controls={{group.menuGroupId}} active="[[_computeActiveGroup(group,currentScreen)]]" on-click="toggle">
+          <paper-button aria-controls={{group.menuGroupId}} active="[[_computeActiveGroup(group,currentScreen)]]"
+            on-click="toggle">
             [[group.title]]
           </paper-button>
 
@@ -156,7 +172,8 @@ Copyright © HatioLab Inc. All rights reserved.
             <paper-listbox selected-item="{{currentMenu}}" class="content">
               <template is="dom-repeat" items="{{group.child}}" as=item>
                 <a href="[[item.routing]]" on-tap="handleItemTap">
-                  <paper-item data$="{{item}}" active="[[_computeMenuActive(item, currentScreen)]]" parent-menu-group="[[group.menuGroupId]]">[[item.title]]</paper-item>
+                  <paper-item data$="{{item}}" active="[[_computeMenuActive(item, currentScreen)]]"
+                    parent-menu-group="[[group.menuGroupId]]">[[item.title]]</paper-item>
                 </a>
               </template>
             </paper-listbox>
@@ -167,10 +184,8 @@ Copyright © HatioLab Inc. All rights reserved.
         <template is="dom-if" if={{isTerminal}}>
           <template is="dom-repeat" items="{{group.child}}" as=item>
             <a href="[[item.routing]]" class="things-image-button">
-              <things-image-button
-                  item="[[item]]"
-                  title="[[item.title]]"
-                  image-src="[[_computeIconpath(item.icon_path)]]">
+              <things-image-button item="[[item]]" title="[[item.title]]"
+                image-src="[[_computeIconpath(item.icon_path)]]">
               </things-image-button>
             </a>
           </template>
@@ -199,7 +214,7 @@ Copyright © HatioLab Inc. All rights reserved.
          * ******
          * @type {String}
          */
-        homeRouting :{
+        homeRouting: {
           type: String,
           value: 'home'
         },
@@ -209,7 +224,7 @@ Copyright © HatioLab Inc. All rights reserved.
          * *******
          * @type {String}
          */
-        loginRouting :{
+        loginRouting: {
           type: String,
           value: 'login'
         },
@@ -219,7 +234,7 @@ Copyright © HatioLab Inc. All rights reserved.
          * *******
          * @type {String}
          */
-        pageContentId : {
+        pageContentId: {
           type: String,
           value: 'content'
         },
@@ -259,7 +274,7 @@ Copyright © HatioLab Inc. All rights reserved.
          * *******
          * @type {Array}
          */
-        queryFields : {
+        queryFields: {
           type: Array,
           computed: '_computedQuery(menuCategory)'
         },
@@ -332,10 +347,10 @@ Copyright © HatioLab Inc. All rights reserved.
        * Life Cycle
        * *******
        */
-      attached: function() {
-          // ******** Routing 초기화 ***********
-          this.addLoginRouting(this.loginRouting);
-          // *********************************
+      attached: function () {
+        // ******** Routing 초기화 ***********
+        this.addLoginRouting(this.loginRouting);
+        // *********************************
       },
 
       /**
@@ -345,7 +360,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {Object} group
        * @param {Object} currentMenu
        */
-      _computeActiveGroup: function(group, currentMenu) {
+      _computeActiveGroup: function (group, currentMenu) {
         return group.id === currentMenu.parent_id;
       },
 
@@ -356,7 +371,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {Object} group
        * @param {Object} currentMenu
        */
-      _computeGroupOpend: function(group, currentMenu){
+      _computeGroupOpend: function (group, currentMenu) {
         if (this.isMobile) {
           return true;
         } else {
@@ -369,7 +384,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {Object} menu
        * @param {Object} currentMenu
        */
-      _computeMenuActive: function(menu, currentMenu){
+      _computeMenuActive: function (menu, currentMenu) {
         return menu.id == currentMenu.id
       },
       /**
@@ -381,24 +396,24 @@ Copyright © HatioLab Inc. All rights reserved.
        ********
        * @param {Object} menus 메뉴 정보 menu.total : 총 메뉴 개수, menu.items : 메뉴 리스트
        */
-      _onChangeMenus: function(menus) {
-        if(menus && menus.length > 0) {
+      _onChangeMenus: function (menus) {
+        if (menus && menus.length > 0) {
           var groups = [], screens = [], me = this;
 
-          menus.forEach(function(item) {
+          menus.forEach(function (item) {
             if (item.menu_type === 'MENU') {
               item.child = me._getChildMenu(item, menus);
               item.menuGroupId = 'group' + item.id;
               groups.push(item);
-            } else if(item.menu_type === 'SCREEN') {
+            } else if (item.menu_type === 'SCREEN') {
               screens.push(item);
-            } else if(item.menu_type === 'HIDDEN'){
+            } else if (item.menu_type === 'HIDDEN') {
               screens.push(item);
             }
           });
 
           // ******** Routing 초기화 ***********
-          this.init(this.homeRouting,screens);
+          this.init(this.homeRouting, screens);
           // *********************************
           this.menuGroup = groups;
           this.screens = screens;
@@ -413,10 +428,10 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param  {Array} items all menu list
        * @return {Array} child screen array
        */
-      _getChildMenu: function(menuGroup, items) {
-        return items.filter(function(item) {
+      _getChildMenu: function (menuGroup, items) {
+        return items.filter(function (item) {
           var screenMenuFlag = (item && item.menu_type === 'SCREEN' && item.parent_id === menuGroup.id);
-          if(screenMenuFlag) {
+          if (screenMenuFlag) {
             item.parent_name = menuGroup.title;
           }
           return screenMenuFlag;
@@ -428,7 +443,7 @@ Copyright © HatioLab Inc. All rights reserved.
        *******
        * @param {String} menuCategory
        */
-      _computedMenuUrl: function(menuCategory) {
+      _computedMenuUrl: function (menuCategory) {
         return 'menus/user_menus/' + menuCategory;
       },
 
@@ -437,15 +452,15 @@ Copyright © HatioLab Inc. All rights reserved.
        *******
        * @param {String} menuCategory
        */
-      _computedQuery: function(menuCategory) {
+      _computedQuery: function (menuCategory) {
         if (menuCategory === 'MOBILE') {
           this.isStandard = true;
           this.isTerminal = false;
           this.isMobile = true;
-        } else if(menuCategory === 'STANDARD') {
+        } else if (menuCategory === 'STANDARD') {
           this.isStandard = true;
           this.isTerminal = false;
-        } else if(menuCategory === 'TERMINAL') {
+        } else if (menuCategory === 'TERMINAL') {
           this.isStandard = false;
           this.isTerminal = true;
         }
@@ -458,7 +473,7 @@ Copyright © HatioLab Inc. All rights reserved.
        *******
        * @param {String} icon 메뉴 아이콘 조회 URL 구성을 위한 첨부파일(이미지) ID
        */
-      _computeIconpath: function(icon) {
+      _computeIconpath: function (icon) {
         return this.globals.baseUrl + '/download/' + icon;
       },
 
@@ -467,15 +482,15 @@ Copyright © HatioLab Inc. All rights reserved.
        * ******
        * @param {Object} e 버튼 클릭 이벤트
        */
-      toggle: function(e) {
+      toggle: function (e) {
         var target = this.$$('#' + e.target.ariaControls);
-        if(target && target.toggle) {
+        if (target && target.toggle) {
           target.toggle();
         }
       },
 
-      handleItemTap: function(e) {
-        if(location.pathname.length > 1) {
+      handleItemTap: function (e) {
+        if (location.pathname.length > 1) {
           e.preventDefault();
           var routing = e.currentTarget.getAttribute('href');
           page('/' + routing);
