차트 화면 자동 생성 메뉴 추가

--- a/app/elements/base/base-home.html
+++ b/app/elements/base/base-home.html
@@ -10,7 +10,7 @@ Copyright © HatioLab Inc. All rights reserved.
 <link rel="import" href="../../bower_components/things-meta/things-named-meta-behavior.html">
 
 <!--
-  홈 메뉴 
+  매니저 > 홈
  -->
 
 <dom-module id="base-home">
@@ -381,7 +381,7 @@ Copyright © HatioLab Inc. All rights reserved.
         } else if (colorType == '2') {
           color += '153,102,255';
         } else {
-          color += '255,206,86';
+          color += '54,162,235';
         }
 
         return {
