--- a/app/elements/things-app/things-elements.html
+++ b/app/elements/things-app/things-elements.html
@@ -55,3 +55,6 @@
 <link rel="import" href="../things-layout/elements.html">
 <link rel="import" href="../things-recent-page/things-recent-page.html">
 <link rel="import" href="../things-profile/things-profile.html">
+
+<link rel="import" href="../things-content/chartjs-lib.html">
+<link rel="import" href="../things-content/things-chart-content.html">
