스타일 작업
1

--- a/app/elements/theme/anythings-theme.html
+++ b/app/elements/theme/anythings-theme.html
@@ -134,6 +134,8 @@ Copyright © HatioLab Inc. All rights reserved.
                 --things-button-text-color:#1d1e21;
                 --things-dark-desc-text-color:#aaacaf;
 
+                --things-search-form-background-color:var(--things-primary-color);
+
                 /* sidebar style */
                 --things-sidebar-background-color:#312e2e;
                 --things-sidebar-active-color:#3c3c3c;
