--- a/app/elements/theme/wcs-theme.html
+++ b/app/elements/theme/wcs-theme.html
@@ -124,7 +124,7 @@ Copyright © HatioLab Inc. All rights reserved.
                 --things-secondary-color: #394e64;
                 /*yellow*/
                 --things-focus-background-color: #f7af01;
-                --things-whitegrey-background-color:#f4f7fb;
+                --things-whitegrey-background-color:rgba(57, 78, 100, 0.9);
                 --things-lightgrey-background-color:rgba(217, 217, 217, .1);
                 --things-white-background-color:#fff;
                 --things-error-color:var(--paper-deep-orange-700);
@@ -134,9 +134,11 @@ Copyright © HatioLab Inc. All rights reserved.
                 --things-button-text-color:#1d1e21;
                 --things-dark-desc-text-color:#aaacaf;
 
+                --things-search-form-background-color:#22A6A7;
+
                 /* sidebar style */
-                --things-sidebar-background-color:#22A6A7;
-                --things-sidebar-active-color:#394e64;
+                --things-sidebar-background-color:#394e64;
+                --things-sidebar-active-color:#22A6A7;
 
                 --things-tiny-icon: {
                     padding: 0;
