--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -83,7 +83,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       ::shadow things-search-form {
         margin: 15px 15px 0 15px;
-        background-color: var(--things-primary-color);
+        background-color: var(--things-search-form-background-color);
         @apply --things-default-border-radius;
       }
 
