백그라운드 이미지.
1

--- a/app/elements/theme/wcs-theme.html
+++ b/app/elements/theme/wcs-theme.html
@@ -487,7 +487,8 @@ Copyright © HatioLab Inc. All rights reserved.
                     color: #fff;
                 }
 
-                --things-home-image-url : url(/images/bg-rail.png);
+
+                --things-home-image-url : url(/images/bg-fnf.png);
                 --things-home-image-position: 50% 100%;
 
                 --things-home-image: {
