--- a/app/by_pass.html
+++ b/app/by_pass.html
@@ -9,179 +9,183 @@ Copyright © HatioLab Inc. All rights reserved.
  -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="shortcut icon"
-      href="./images/icon-shortcut.png"
-      type="image/x-icon"
-    />
-    <title id="title">이동중...</title>
-    <style>
-      @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
-      html {
-        font-family: "Noto Sans KR";
-        display: flex;
-        height: 100%;
-      }
-      body {
-        display: flex;
-        flex: 1;
-        margin: 0;
-      }
-      #container {
-        display: flex;
-        flex: 1;
-        background-image: url(/images/bg-rail.png);
-        background-position: 50% 100%;
-        background-color: #434854;
-        background-size: cover;
-        background-repeat: no-repeat;
-      }
-      #msg-box {
-        display: flex;
-        margin: auto;
-        margin-top: 15%;
-        height: 20vh;
-        width: 30vw;
-        background-color: #fff;
-        border-radius: 7px;
-      }
-      #msg {
-        margin: auto;
-        width: 90%;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="container">
-      <div id="msg-box">
-        <span id="msg">
-          <span id="loading-dots">...</span>
-        </span>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="shortcut icon" href="./images/icon-shortcut.png" type="image/x-icon" />
+  <title id="title">이동중...</title>
+  <style>
+    @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+
+    html {
+      font-family: "Noto Sans KR";
+      display: flex;
+      height: 100%;
+    }
+
+    body {
+      display: flex;
+      flex: 1;
+      margin: 0;
+    }
+
+    #container {
+      display: flex;
+      flex: 1;
+      background-image: url(/images/bg-fnf.png);
+      background-position: 50% 100%;
+      background-color: #434854;
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+
+    #msg-box {
+      display: flex;
+      margin: auto;
+      margin-top: 15%;
+      height: 20vh;
+      width: 30vw;
+      background-color: #fff;
+      border-radius: 7px;
+    }
+
+    #msg {
+      margin: auto;
+      width: 90%;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="container">
+    <div id="msg-box">
+      <span id="msg">
+        <span id="loading-dots">...</span>
+      </span>
     </div>
-    <script>
-      window.addEventListener("load", event => {
-        var siteNameKey = "site_name=";
-        var subdomainKey = "subdomain=";
-        // var otpKey = 'otp=';
-        // var domainIdKey = 'domain_id=';
-        // var serverUrlKey = 'server_url=';
-        // var siteName, token, domainId, serverUrl;
-        var siteName, subdomain;
+  </div>
+  <script>
+    window.addEventListener("load", event => {
+      var siteNameKey = "site_name=";
+      var subdomainKey = "subdomain=";
+      // var otpKey = 'otp=';
+      // var domainIdKey = 'domain_id=';
+      // var serverUrlKey = 'server_url=';
+      // var siteName, token, domainId, serverUrl;
+      var siteName, subdomain;
 
-        var params = decodeURIComponent(location.search);
-        if (params.startsWith("?")) {
-          params = params.substr(1, params.length);
+      var params = decodeURIComponent(location.search);
+      if (params.startsWith("?")) {
+        params = params.substr(1, params.length);
+      }
+
+      params = params.split("&");
+
+      params.forEach(param => {
+        if (param.indexOf(siteNameKey) === 0) {
+          siteName = param.replace(siteNameKey, "");
+        } else if (param.indexOf(subdomainKey === 0)) {
+          subdomain = param.replace(subdomainKey, "");
         }
-
-        params = params.split("&");
-
-        params.forEach(param => {
-          if (param.indexOf(siteNameKey) === 0) {
-            siteName = param.replace(siteNameKey, "");
-          } else if (param.indexOf(subdomainKey === 0)) {
-            subdomain = param.replace(subdomainKey, "");
-          }
-          //   else if (param.indexOf(otpKey) === 0) {
-          //   token = param.replace(otpKey, '');
-          // } else if (param.indexOf(domainIdKey) === 0) {
-          //   domainId = param.replace(domainIdKey, '');
-          // }
-          //   else if (param.indexOf(serverUrlKey) === 0) {
-          //   serverUrl = param.replace(serverUrlKey, '');
-          // }
-        });
-
-        initViews(siteName);
-        clearUserInfo();
-        // setServerUrl(serverUrl);
-        redirectDomainSite(subdomain);
-        // reqeustOTA(token, domainId, serverUrl);
+        //   else if (param.indexOf(otpKey) === 0) {
+        //   token = param.replace(otpKey, '');
+        // } else if (param.indexOf(domainIdKey) === 0) {
+        //   domainId = param.replace(domainIdKey, '');
+        // }
+        //   else if (param.indexOf(serverUrlKey) === 0) {
+        //   serverUrl = param.replace(serverUrlKey, '');
+        // }
       });
 
-      function initViews(siteName) {
-        var currentLocale = getLocale();
-        var message;
+      initViews(siteName);
+      clearUserInfo();
+      // setServerUrl(serverUrl);
+      redirectDomainSite(subdomain);
+      // reqeustOTA(token, domainId, serverUrl);
+    });
 
-        if (currentLocale.startsWith("ko")) {
-          message = `${siteName}(으)로 이동중입니다.`;
-        } else if (currentLocale.startsWith("en")) {
-          message = `Now moving to ${siteName}.`;
-        } else if (currentLocale.startsWith("zh")) {
-          message = `Now moving to ${siteName}.`;
-        } else {
-          message = `${siteName}으로 이동중 입니다.`;
+    function initViews(siteName) {
+      var currentLocale = getLocale();
+      var message;
+
+      if (currentLocale.startsWith("ko")) {
+        message = `${siteName}(으)로 이동중입니다.`;
+      } else if (currentLocale.startsWith("en")) {
+        message = `Now moving to ${siteName}.`;
+      } else if (currentLocale.startsWith("zh")) {
+        message = `Now moving to ${siteName}.`;
+      } else {
+        message = `${siteName}으로 이동중 입니다.`;
+      }
+
+      document.getElementById("msg").textContent = message;
+      document.getElementById("title").textContent = message;
+
+      var times = 1;
+      setInterval(function () {
+        var dotCnt = times % 3;
+        var tempMessage = message;
+
+        for (var i = 0; i < dotCnt; i++) {
+          tempMessage += ".";
         }
 
-        document.getElementById("msg").textContent = message;
-        document.getElementById("title").textContent = message;
+        document.getElementById("msg").textContent = tempMessage;
+        times++;
+      }, 500);
+    }
 
-        var times = 1;
-        setInterval(function() {
-          var dotCnt = times % 3;
-          var tempMessage = message;
-
-          for (var i = 0; i < dotCnt; i++) {
-            tempMessage += ".";
-          }
-
-          document.getElementById("msg").textContent = tempMessage;
-          times++;
-        }, 500);
+    function getLocale() {
+      var currentLocale = JSON.parse(localStorage.getItem("setting.locale"));
+      if (!currentLocale) {
+        currentLocale = navigator.language.toLowerCase();
       }
 
-      function getLocale() {
-        var currentLocale = JSON.parse(localStorage.getItem("setting.locale"));
-        if (!currentLocale) {
-          currentLocale = navigator.language.toLowerCase();
+      return currentLocale;
+    }
+
+    function clearUserInfo() {
+      localStorage.removeItem("setting.user");
+    }
+
+    function setServerUrl(serverUrl) {
+      localStorage.setItem(
+        "setting.baseUrl",
+        JSON.stringify(serverUrl + "/rest")
+      );
+    }
+
+    function reqeustOTA(token, domainId, serverUrl) {
+      var xhr = new XMLHttpRequest();
+      xhr.withCredentials = true;
+
+      xhr.open("GET", serverUrl + "/rest/domains", true);
+      xhr.setRequestHeader("Content-Type", "application/json");
+      xhr.setRequestHeader("Authorization-Type", "ota");
+      xhr.setRequestHeader("Authorization-Key", token);
+      xhr.setRequestHeader("x-domain-id", domainId);
+
+      xhr.onreadystatechange = function (event) {
+        if (this.readyState === 4 && this.status == 200) {
+          redirectAfterResponse();
         }
+      };
 
-        return currentLocale;
-      }
+      xhr.send();
+    }
 
-      function clearUserInfo() {
-        localStorage.removeItem("setting.user");
-      }
+    function redirectAfterResponse() {
+      location.href = location.origin;
+    }
 
-      function setServerUrl(serverUrl) {
-        localStorage.setItem(
-          "setting.baseUrl",
-          JSON.stringify(serverUrl + "/rest")
-        );
-      }
+    function redirectDomainSite(subdomain) {
+      setTimeout(() => {
+        location.href = location.origin + "/" + subdomain;
+      }, 3000);
+    }
+  </script>
+</body>
 
-      function reqeustOTA(token, domainId, serverUrl) {
-        var xhr = new XMLHttpRequest();
-        xhr.withCredentials = true;
-
-        xhr.open("GET", serverUrl + "/rest/domains", true);
-        xhr.setRequestHeader("Content-Type", "application/json");
-        xhr.setRequestHeader("Authorization-Type", "ota");
-        xhr.setRequestHeader("Authorization-Key", token);
-        xhr.setRequestHeader("x-domain-id", domainId);
-
-        xhr.onreadystatechange = function(event) {
-          if (this.readyState === 4 && this.status == 200) {
-            redirectAfterResponse();
-          }
-        };
-
-        xhr.send();
-      }
-
-      function redirectAfterResponse() {
-        location.href = location.origin;
-      }
-
-      function redirectDomainSite(subdomain) {
-        setTimeout(() => {
-          location.href = location.origin + "/" + subdomain;
-        }, 3000);
-      }
-    </script>
-  </body>
 </html>
