--- a/app/by_pass.html
+++ b/app/by_pass.html
@@ -34,7 +34,7 @@ Copyright © HatioLab Inc. All rights reserved.
     #container {
       display: flex;
       flex: 1;
-      background-image: url(/images/bg-fnf.png);
+      background-image: url(/images/bg-wcs.png);
       background-position: 50% 100%;
       background-color: #434854;
       background-size: cover;
