--- a/app/elements/theme/wcs-theme.html
+++ b/app/elements/theme/wcs-theme.html
@@ -488,7 +488,7 @@ Copyright © HatioLab Inc. All rights reserved.
                 }
 
 
-                --things-home-image-url : url(/images/bg-fnf.png);
+                --things-home-image-url : url(/images/bg-wcs.png);
                 --things-home-image-position: 50% 100%;
 
                 --things-home-image: {
